--- a/Html docs/homepage.html
+++ b/Html docs/homepage.html
@@ -3,11 +3,11 @@
     <style>
     #event-button{
         position: absolute;
-        left: 100px;
+        right: 100px;
     }
     </style>
     <head>
-            <title>Project Name</title>
+        <title>Project Name</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <!--Included Boostrap-->
@@ -26,7 +26,7 @@
             <div class="modal-dialog modal-dialog-centered" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="ModalCenterTitle">Create an Event</h5>
+                    <h4 class="modal-title" id="ModalCenterTitle">Add an Event</h4>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
