Add Firebase Config to HTML Files

--- a/Html docs/Create account.html
+++ b/Html docs/Create account.html
@@ -45,6 +45,19 @@
 	<button type="button" class="btn btn-info">Create Account!</button>
 </div>
 
+<script src="https://www.gstatic.com/firebasejs/5.6.0/firebase.js"></script>
+<script>
+  // Initialize Firebase
+  var config = {
+    apiKey: "AIzaSyBD-0alEnH2GSG4-ap3JiGhDHi0M5MFhSg",
+    authDomain: "event-planner-2bed5.firebaseapp.com",
+    databaseURL: "https://event-planner-2bed5.firebaseio.com",
+    projectId: "event-planner-2bed5",
+    storageBucket: "event-planner-2bed5.appspot.com",
+    messagingSenderId: "654317062394"
+  };
+  firebase.initializeApp(config);
+</script>
 
 </body>
 </html>
