--- a/Html docs/homepage.html
+++ b/Html docs/homepage.html
@@ -38,7 +38,7 @@
                                 <div class="col-sm-9">
                                     <input type="text" class="form-control" id="event-title"placeholder="">
                                 </div>
-                            
+
                         </div>
                         <div class="form-group row"> <!--Input address-->
                             <label for="address"class="col-sm-3 col-form-label" >Address</label>
@@ -67,16 +67,16 @@
                             <div class="form-group col-md-4">
                                 <label for="inputEventTime"> Event Time: </label> <!--Event time -->
                                 <select id="inputEventTime" class="form-control">
-                                    <option selected>Event Time</option>   
-                                    <option>12:00 am</option> <option>12:30 am</option> <option>01:00 am</option> <option>01:30 am</option> 
+                                    <option selected>Event Time</option>
+                                    <option>12:00 am</option> <option>12:30 am</option> <option>01:00 am</option> <option>01:30 am</option>
                                     <option>02:00 am</option> <option>02:30 am</option> <option>03:00 am</option> <option>03:30 am</option>
-                                    <option>04:00 am</option> <option>04:30 am</option> <option>05:00 am</option> <option>05:30 am</option> 
+                                    <option>04:00 am</option> <option>04:30 am</option> <option>05:00 am</option> <option>05:30 am</option>
                                     <option>06:00 am</option> <option>06:30 am</option> <option>07:00 am</option> <option>07:30 am</option>
                                     <option>08:00 am</option> <option>08:30 am</option> <option>09:00am</option> <option>09:30 am</option>
                                     <option>10:00 am</option> <option>10:30 am</option> <option>11:00am</option> <option>11:30 am</option>
-                                    <option>12:00 pm</option> <option>12:30 pm</option> <option>01:00 pm</option> <option>01:30 pm</option> 
+                                    <option>12:00 pm</option> <option>12:30 pm</option> <option>01:00 pm</option> <option>01:30 pm</option>
                                     <option>02:00 pm</option> <option>02:30 pm</option> <option>03:00 pm</option> <option>03:30 pm</option>
-                                    <option>04:00 pm</option> <option>04:30 pm</option> <option>05:00 pm</option> <option>05:30 pm</option> 
+                                    <option>04:00 pm</option> <option>04:30 pm</option> <option>05:00 pm</option> <option>05:30 pm</option>
                                     <option>06:00 pm</option> <option>06:30 pm</option> <option>07:00 pm</option> <option>07:30 pm</option>
                                     <option>08:00 pm</option> <option>08:30 pm</option> <option>09:00 pm</option> <option>09:30 pm</option>
                                     <option>10:00 pm</option> <option>10:30 pm</option> <option>11:00 pm</option> <option>11:30 pm</option>
@@ -86,15 +86,15 @@
                                 <label for="inputReminderTime">Reminder Time:</label> <!--Time to be Reminded-->
                                 <select id="inputReminderTime" class="form-control">
                                     <option selected>Reminder Time</option>
-                                    <option>12:00 am</option> <option>12:30 am</option> <option>01:00 am</option> <option>01:30 am</option> 
+                                    <option>12:00 am</option> <option>12:30 am</option> <option>01:00 am</option> <option>01:30 am</option>
                                     <option>02:00 am</option> <option>02:30 am</option> <option>03:00 am</option> <option>03:30 am</option>
-                                    <option>04:00 am</option> <option>04:30 am</option> <option>05:00 am</option> <option>05:30 am</option> 
+                                    <option>04:00 am</option> <option>04:30 am</option> <option>05:00 am</option> <option>05:30 am</option>
                                     <option>06:00 am</option> <option>06:30 am</option> <option>07:00 am</option> <option>07:30 am</option>
                                     <option>08:00 am</option> <option>08:30 am</option> <option>09:00am</option> <option>09:30 am</option>
                                     <option>10:00 am</option> <option>10:30 am</option> <option>11:00am</option> <option>11:30 am</option>
-                                    <option>12:00 pm</option> <option>12:30 pm</option> <option>01:00 pm</option> <option>01:30 pm</option> 
+                                    <option>12:00 pm</option> <option>12:30 pm</option> <option>01:00 pm</option> <option>01:30 pm</option>
                                     <option>02:00 pm</option> <option>02:30 pm</option> <option>03:00 pm</option> <option>03:30 pm</option>
-                                    <option>04:00 pm</option> <option>04:30 pm</option> <option>05:00 pm</option> <option>05:30 pm</option> 
+                                    <option>04:00 pm</option> <option>04:30 pm</option> <option>05:00 pm</option> <option>05:30 pm</option>
                                     <option>06:00 pm</option> <option>06:30 pm</option> <option>07:00 pm</option> <option>07:30 pm</option>
                                     <option>08:00 pm</option> <option>08:30 pm</option> <option>09:00 pm</option> <option>09:30 pm</option>
                                     <option>10:00 pm</option> <option>10:30 pm</option> <option>11:00 pm</option> <option>11:30 pm</option>
@@ -113,15 +113,28 @@
             </div>
         </div>
 
+        <script src="https://www.gstatic.com/firebasejs/5.6.0/firebase.js"></script>
+        <script>
+          // Initialize Firebase
+          var config = {
+            apiKey: "AIzaSyBD-0alEnH2GSG4-ap3JiGhDHi0M5MFhSg",
+            authDomain: "event-planner-2bed5.firebaseapp.com",
+            databaseURL: "https://event-planner-2bed5.firebaseio.com",
+            projectId: "event-planner-2bed5",
+            storageBucket: "event-planner-2bed5.appspot.com",
+            messagingSenderId: "654317062394"
+          };
+          firebase.initializeApp(config);
+        </script>
 
     <!-- Optional JavaScript -->
         <!-- jQuery first, then Popper.js, then Bootstrap JS -->
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>  
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
         <!-- Include jQuery -->
         <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
-        <!--Include Script for date picker-->        
+        <!--Include Script for date picker-->
         <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.4.1/js/bootstrap-datepicker.min.js"></script>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.4.1/css/bootstrap-datepicker3.css"/>
         <script>
