--- a/Html docs/Login.html
+++ b/Html docs/Login.html
@@ -20,7 +20,7 @@
 	<form class="form-inline">
 		<div class="input-group">
 			<span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
-			<input id="email" type="text" class="form-control" name="email" placeholder="Username">
+			<input id="user" type="text" class="form-control" name="email" placeholder="Username">
 		</div>
 	</form>
 </div>
@@ -34,10 +34,26 @@
 </div>
 <br>
 <div class="container">
-	<button type="button" class="btn btn-success">Log In</button>
+	<button type="button" onclick="login()" class="btn btn-success">Log In</button>
 	<button type="button" class="btn btn-info">Create An Account</button>
 </div>
 
+
+<script>
+function login(){
+	var user = document.getElementById("user").value;
+	var password = document.getElementById("password").value;
+	
+	data = {
+		"user":user, "password":password
+		}
+	window.alert("HELLO");
+	window.location.replace("homepage.html");
+	if(user != null && user.hasOwnProperty('uid') && user.hasOwnProperty('idToken')){
+		window.location.replace("homepage.html");
+		return;
+	}
+</script>
 <script src="https://www.gstatic.com/firebasejs/5.6.0/firebase.js"></script>
 <script>
   // Initialize Firebase
