--- a/Html docs/Create account.html
+++ b/Html docs/Create account.html
@@ -42,8 +42,32 @@
 </div>
 <br>
 <div class="container">
-	<button type="button" class="btn btn-info">Create Account!</button>
+	<button id=b_create type="button" class="btn btn-info">Create Account!</button>
 </div>
+<script>
+document.getElementById("b_create").onclick = function() {send_verification()};
+
+function send_verification(){
+  var email = document.getElementById("email").value;
+	var password = document.getElementById("password").value;
+
+  firebase.auth().createUserWithEmailAndPassword(email, password).catch(function(error) {
+  // Handle Errors here.
+  var errorCode = error.code;
+  var errorMessage = error.message;
+  // ...
+});
+
+  var user = firebase.auth().currentUser;
+  user.sendEmailVerification().then(function() {
+  // Email sent.
+    window.alert("Verification sent");
+  }).catch(function(error) {
+  // An error happened.
+    window.alert("Error: " + error.message);
+  });
+}
+</script>
 
 <script src="https://www.gstatic.com/firebasejs/5.6.0/firebase.js"></script>
 <script>
