Database is No Longer Overwritten

--- a/Html docs/Create account.html
+++ b/Html docs/Create account.html
@@ -63,7 +63,7 @@ function send_verification(){
   var userId = user.uid;
 
   var rootRef = firebase.database().ref().child('users/' + userId);
-  rootRef.set({
+  rootRef.update({
   username: name,
   email: email
   });
