--- a/Html docs/homepage.html
+++ b/Html docs/homepage.html
@@ -112,7 +112,24 @@
             </div>
             </div>
         </div>
-
+		<div class="container">
+			<table class="table table-striped">
+				<thead>
+					<tr>
+						<th scope="col">Event</th>
+						<th scope="col">Date</th>
+						<th scope="col">Time</th>
+						<th scopr="col">reminder</th>
+					</tr>
+				</thead>
+				<tbody>
+					<th scope="row">testing</th>
+					<td>1/1/1111</td>
+					<td>12:00</td>
+					<td>12 hours before</td>
+				</tbody>
+			</table>
+		</div>
         <script src="https://www.gstatic.com/firebasejs/5.6.0/firebase.js"></script>
         <script>
           // Initialize Firebase
