--- a/Html docs/Create account.html
+++ b/Html docs/Create account.html
@@ -13,8 +13,16 @@
 <div class="container">
 
 		<h1>New Account</h1>
-		<p>Please enter your Email Address and Password</p>
+		<p>Please enter a Username, Email address, and Password</p>
 
+</div>
+<div class="container">
+	<form class="form-inline">
+		<div class="input-group">
+			<span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
+			<input id="username" type="text" class="form-control" name="username" placeholder="UserName">
+		</div>
+	</form>
 </div>
 <div class="container">
 	<form class="form-inline">
@@ -40,6 +48,7 @@
 document.getElementById("b_create").onclick = function() {send_verification()};
 
 function send_verification(){
+  var name = document.getElementById("username").value;
   var email = document.getElementById("email").value;
 	var password = document.getElementById("password").value;
 
@@ -55,6 +64,7 @@ function send_verification(){
 
   var rootRef = firebase.database().ref().child('users/' + userId);
   rootRef.update({
+  username: name,
   email: email
   });
   user.sendEmailVerification().then(function() {
