--- a/Html docs/Login.html
+++ b/Html docs/Login.html
@@ -20,7 +20,7 @@
 	<form class="form-inline">
 		<div class="input-group">
 			<span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
-			<input id="user" type="text" class="form-control" name="email" placeholder="Email">
+			<input id="user" type="text" class="form-control" name="email" placeholder="Username">
 		</div>
 	</form>
 </div>
