--- a/Html docs/Login.html
+++ b/Html docs/Login.html
@@ -53,6 +53,7 @@ function login(){
     // Handle Errors here.
     var errorCode = error.code;
     var errorMessage = error.message;
+    var errorF = false;
     if (errorCode === 'auth/wrong-password') {
       alert('Wrong password.');
     }
@@ -65,11 +66,12 @@ function login(){
       alert(errorMessage);
     }
    console.log(error);
+   errorF = true;
   });
 
   var user = firebase.auth().currentUser;
 
-  if (user) {
+  if (user && !errorF) {
     // User is signed in.
     window.location.replace("homepage.html");
   }
