--- a/Html docs/Login.html
+++ b/Html docs/Login.html
@@ -38,7 +38,6 @@
 	<a href="create account.html" id = "b_pass" type="button" class="btn btn-info">Create An Account</a>
 </div>
 
-
 <script>
 document.getElementById("b_login").onclick = function() {login()};
 //document.getElementById("b_pass").onclick = function() {newAccount()};
@@ -73,6 +72,6 @@ function newAccount(){
   };
   firebase.initializeApp(config);
 </script>
-
+<!--<script src="/Html docs/Loginscript.js"></script>-->
 </body>
 </html>
