Disallow Duplicate Emails

--- a/Html docs/Create account.html
+++ b/Html docs/Create account.html
@@ -51,6 +51,20 @@ function send_verification(){
     return;
   }
 
+  firebase.auth().fetchSignInMethodsForEmail(email).catch(function(error) {
+  // Handle Errors here.
+  var errorCode = error.code;
+  var errorMessage = error.message;
+  if (errorCode === 'auth/invalid-email') {
+    alert('Invalid email.');
+  }
+  console.log(error);
+  window.location.replace("create account.html");
+  invalid = true;
+  return;
+});
+
+  if(!invalid) {
   firebase.auth().createUserWithEmailAndPassword(email, password).catch(function(error) {
   // Handle Errors here.
   var errorCode = error.code;
@@ -58,11 +72,21 @@ function send_verification(){
   if (errorCode === 'auth/invalid-email') {
     alert('Invalid email.');
   }
+  else if (errorCode === 'auth/email-already-in-use') {
+    alert('Email is already in use.');
+  }
+  console.log(error);
+  window.location.replace("create account.html");
   invalid = true;
+  return;
 });
+}//invalid
 
   var user = firebase.auth().currentUser;
+  if(user != "") {
   var userId = user.uid;
+  invalid = true;
+  }
 
   if(!invalid) {
   var ref = firebase.database().ref('users');
