--- a/Html docs/Login.html
+++ b/Html docs/Login.html
@@ -45,36 +45,37 @@ document.getElementById("b_login").onclick = function() {login()};
 function login(){
 	var email = document.getElementById("user").value;
 	var password = document.getElementById("password").value;
-  var errorF = false;
-
-	data = {
-		"user":email, "password":password
-		}
-    firebase.auth().signInWithEmailAndPassword(email, password).catch(function(error) {
-    // Handle Errors here.
-    var errorCode = error.code;
-    var errorMessage = error.message;
-    if (errorCode === 'auth/wrong-password') {
-      alert('Wrong password.');
-    }
-    else if (errorCode === 'auth/invalid-email') {
-      alert('Invalid email.');
-    }
-    else if (errorCode === 'auth/user-not-found') {
-      alert('User not found.');
-    } else {
-      alert(errorMessage);
-    }
-   console.log(error);
-   errorF = true;
-  });
-
-  var user = firebase.auth().currentUser;
-
-  if (user && !errorF) {
-    // User is signed in.
-    window.location.replace("homepage.html");
-  }
+	//$.post("/loginsubmit", function(){
+			var errorF = false;
+			data = {
+				"user":email, "password":password
+				}
+			firebase.auth().signInWithEmailAndPassword(email, password).catch(function(error) {
+			// Handle Errors here.
+			var errorCode = error.code;
+			var errorMessage = error.message;
+			if (errorCode === 'auth/wrong-password') {
+			alert('Wrong password.');
+			}
+			else if (errorCode === 'auth/invalid-email') {
+			alert('Invalid email.');
+			}
+			else if (errorCode === 'auth/user-not-found') {
+			alert('User not found.');
+			} else {
+			alert(errorMessage);
+			}
+		console.log(error);
+		errorF = true;
+		});
+		var user = firebase.auth().currentUser;
+		if (user && !errorF) {
+			// User is signed in.
+			console.log("in login html file");
+			window.location.replace("homepage.html");
+		}	
+	//});
+    
 }
 function newAccount(){
 	window.location.replace("create account.html");
