--- a/Html docs/homepage.html
+++ b/Html docs/homepage.html
@@ -50,13 +50,13 @@
                         </div>
                         <div class="form-group row">
                             <div class="form-group col-md-6"><!--city input-->
-                                <input type="text" class="form-control" placeholder="City">
+                                <input id="city" type="text" class="form-control" placeholder="City">
                             </div>
                             <div class="form-group col-md-4"><!--state input-->
-                                <input type="text" class="form-control" placeholder="State">
+                                <input id="state" type="text" class="form-control" placeholder="State">
                             </div>
                             <div class="form-group col-md-2"> <!--Zip input-->
-                                <input type="text" class="form-control" placeholder="Zip">
+                                <input id="zip" type="text" class="form-control" placeholder="Zip">
                             </div>
                         </div>
                         <div class="form-group row"> <!-- Date input -->
@@ -74,8 +74,8 @@
                                     <option>02:00 am</option> <option>02:30 am</option> <option>03:00 am</option> <option>03:30 am</option>
                                     <option>04:00 am</option> <option>04:30 am</option> <option>05:00 am</option> <option>05:30 am</option>
                                     <option>06:00 am</option> <option>06:30 am</option> <option>07:00 am</option> <option>07:30 am</option>
-                                    <option>08:00 am</option> <option>08:30 am</option> <option>09:00am</option> <option>09:30 am</option>
-                                    <option>10:00 am</option> <option>10:30 am</option> <option>11:00am</option> <option>11:30 am</option>
+                                    <option>08:00 am</option> <option>08:30 am</option> <option>09:00 am</option> <option>09:30 am</option>
+                                    <option>10:00 am</option> <option>10:30 am</option> <option>11:00 am</option> <option>11:30 am</option>
                                     <option>12:00 pm</option> <option>12:30 pm</option> <option>01:00 pm</option> <option>01:30 pm</option>
                                     <option>02:00 pm</option> <option>02:30 pm</option> <option>03:00 pm</option> <option>03:30 pm</option>
                                     <option>04:00 pm</option> <option>04:30 pm</option> <option>05:00 pm</option> <option>05:30 pm</option>
@@ -92,8 +92,8 @@
                                     <option>02:00 am</option> <option>02:30 am</option> <option>03:00 am</option> <option>03:30 am</option>
                                     <option>04:00 am</option> <option>04:30 am</option> <option>05:00 am</option> <option>05:30 am</option>
                                     <option>06:00 am</option> <option>06:30 am</option> <option>07:00 am</option> <option>07:30 am</option>
-                                    <option>08:00 am</option> <option>08:30 am</option> <option>09:00am</option> <option>09:30 am</option>
-                                    <option>10:00 am</option> <option>10:30 am</option> <option>11:00am</option> <option>11:30 am</option>
+                                    <option>08:00 am</option> <option>08:30 am</option> <option>09:00 am</option> <option>09:30 am</option>
+                                    <option>10:00 am</option> <option>10:30 am</option> <option>11:00 am</option> <option>11:30 am</option>
                                     <option>12:00 pm</option> <option>12:30 pm</option> <option>01:00 pm</option> <option>01:30 pm</option>
                                     <option>02:00 pm</option> <option>02:30 pm</option> <option>03:00 pm</option> <option>03:30 pm</option>
                                     <option>04:00 pm</option> <option>04:30 pm</option> <option>05:00 pm</option> <option>05:30 pm</option>
@@ -108,7 +108,7 @@
                     </form>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-success">Create</button>
+                    <button id="b_create" type="button" class="btn btn-success">Create</button>
                     <button type="button" class="btn btn-danger" data-dismiss="modal">Cancel</button>
                 </div>
             </div>
@@ -144,6 +144,12 @@
             messagingSenderId: "654317062394"
           };
           firebase.initializeApp(config);
+        </script>
+        <script>
+        document.getElementById("b_create").onclick = function() {create_event()};
+        function create_event(){
+
+        }
         </script>
 
     <!-- Optional JavaScript -->
