modal box closes

--- a/Html docs/homepage.html
+++ b/Html docs/homepage.html
@@ -108,7 +108,7 @@
                     </form>
                 </div>
                 <div class="modal-footer">
-                    <button id="b_create" type="button" class="btn btn-success">Create</button>
+                    <button id="b_create" type="button" class="btn btn-success" data-dismiss="modal">Create</button>
                     <button type="button" class="btn btn-danger" data-dismiss="modal">Cancel</button>
                 </div>
             </div>
