--- a/Html docs/homepage.html
+++ b/Html docs/homepage.html
@@ -88,23 +88,17 @@
                                 <label for="inputReminderTime">Reminder Time:</label> <!--Time to be Reminded-->
                                 <select id="inputReminderTime" class="form-control">
                                     <option selected>Reminder Time</option>
-                                    <option>12:00 am</option> <option>12:30 am</option> <option>01:00 am</option> <option>01:30 am</option>
-                                    <option>02:00 am</option> <option>02:30 am</option> <option>03:00 am</option> <option>03:30 am</option>
-                                    <option>04:00 am</option> <option>04:30 am</option> <option>05:00 am</option> <option>05:30 am</option>
-                                    <option>06:00 am</option> <option>06:30 am</option> <option>07:00 am</option> <option>07:30 am</option>
-                                    <option>08:00 am</option> <option>08:30 am</option> <option>09:00 am</option> <option>09:30 am</option>
-                                    <option>10:00 am</option> <option>10:30 am</option> <option>11:00 am</option> <option>11:30 am</option>
-                                    <option>12:00 pm</option> <option>12:30 pm</option> <option>01:00 pm</option> <option>01:30 pm</option>
-                                    <option>02:00 pm</option> <option>02:30 pm</option> <option>03:00 pm</option> <option>03:30 pm</option>
-                                    <option>04:00 pm</option> <option>04:30 pm</option> <option>05:00 pm</option> <option>05:30 pm</option>
-                                    <option>06:00 pm</option> <option>06:30 pm</option> <option>07:00 pm</option> <option>07:30 pm</option>
-                                    <option>08:00 pm</option> <option>08:30 pm</option> <option>09:00 pm</option> <option>09:30 pm</option>
-                                    <option>10:00 pm</option> <option>10:30 pm</option> <option>11:00 pm</option> <option>11:30 pm</option>
+                                    <option>5 minutes before</option> <option>10 minutes before</option> <option>15 minutes before</option> <option>20 minutes before</option>
+                                    <option>30 minutes before</option> <option>45 minutes before</option> <option>1 hour before</option>
+                                    <option>2 hours before</option> <option>3 hours before</option> <option>4 hours before</option> <option>5 hours before</option>
+                                    <option>6 hours before</option> <option>7 hours before</option> <option>8 hours before</option> <option>9 hours before</option>
+                                    <option>10 hours before</option> <option>11 hours before</option> <option>12 hours before</option> <option>13 hours before</option>
+                                    <option>14 hours before</option> <option>15 hours before</option> <option>16 hours before</option> <option>17 hours before</option>
+                                    <option>18 hours before</option> <option>19 hours before </option> <option>20 hours before</option> <option>1 day before</option>
                                 </select>
                             </div>
                         </div>
                         <!-- remind others field-->
-
                     </form>
                 </div>
                 <div class="modal-footer">
