--- a/Html docs/homepage.html
+++ b/Html docs/homepage.html
@@ -102,28 +102,28 @@
                     </form>
                 </div>
                 <div class="modal-footer">
-                    <button id="b_create" type="button" class="btn btn-success" data-dismiss="modal">Create</button>
+                    <button id="b_create" type="button" class="btn btn-success" data-dismiss="modal" onclick="addEventToTable()">Create</button>
                     <button type="button" class="btn btn-danger" data-dismiss="modal">Cancel</button>
                 </div>
             </div>
             </div>
         </div>
 		<div class="container">
-			<table class="table table-striped">
-				<thead>
+			<table class="table table-striped" id="eventTable">
+				<!--<thead>-->
 					<tr>
 						<th scope="col">Event</th>
 						<th scope="col">Date</th>
 						<th scope="col">Time</th>
 						<th scopr="col">reminder</th>
 					</tr>
-				</thead>
-				<tbody>
+				<!--</thead>
+				<tbody>-->
 					<th scope="row">testing</th>
 					<td>1/1/1111</td>
 					<td>12:00</td>
 					<td>12 hours before</td>
-				</tbody>
+				<!--</tbody>-->
 			</table>
 		</div>
         <script src="https://www.gstatic.com/firebasejs/5.6.0/firebase.js"></script>
@@ -142,28 +142,37 @@
         <script>
         document.getElementById("b_create").onclick = function() {create_event()};
         function create_event(){
-          var name = document.getElementById("event-title").value;
-          var address = document.getElementById("streetaddress").value;
-          var city = document.getElementById("city").value;
-          var state = document.getElementById("state").value;
-          var zip = document.getElementById("zip").value;
-          var date = document.getElementById("chooseDate").value;
-          var eTime = document.getElementById("inputEventTime").value;
-          var reminder = document.getElementById("inputReminderTime").value;
+            var name = document.getElementById("event-title").value;
+            var address = document.getElementById("streetaddress").value;
+            var city = document.getElementById("city").value;
+            var state = document.getElementById("state").value;
+            var zip = document.getElementById("zip").value;
+            var date = document.getElementById("chooseDate").value;
+            var eTime = document.getElementById("inputEventTime").value;
+            var reminder = document.getElementById("inputReminderTime").value;
+            
+            //code to add it to the table
+            var table=document.getElementById("eventTable");
+            var totalRowCount=table.rows.length;
+            window.alert(totalRowCount);
+            // Create an empty <tr> element and add it to the 1st position of the table:
+            var row = table.insertRow(totalRowCount);
+            //insert element into the table
+            $('#eventTable').append('<tr><td>'+name+'</td><td>'+address+'</td><td>'+eTime+'</td><td>'+reminder+'</td></tr>');
 
-          var ref = firebase.database().ref('events');
-          var data = {
-            name: name,
-            address: address,
-            city: city,
-            state: state,
-            zip: zip,
-            date: date,
-            eTime: eTime,
-            reminder: reminder,
-          }
-          ref.push(data);
-        }
+            var ref = firebase.database().ref('events');
+            var data = {
+                name: name,
+                address: address,
+                city: city,
+                state: state,
+                zip: zip,
+                date: date,
+                eTime: eTime,
+                reminder: reminder,
+            }
+            ref.push(data);
+            }
         </script>
 
     <!-- Optional JavaScript -->
