--- a/Html docs/homepage.html
+++ b/Html docs/homepage.html
@@ -5,6 +5,10 @@
         position: static;
         right: 100px;
     }
+    #logout-button{
+        position: absolute;
+        right:70px;
+    }
     </style>
     <head>
         <title>Project Name</title>
@@ -21,7 +25,8 @@
     </head>
     <body>
 		<div class="container">
-			<button type="button" class="btn btn-info" id="event-button" data-toggle="modal"data-target="#ModalCenter">Create a Event</button>
+            <button type="button" class="btn btn-info" id="event-button" data-toggle="modal"data-target="#ModalCenter">Create a Event</button>
+            <button type="button" class="btn btn-warning" id="logout-button">Logout</button>
         </div>
 		<!-- Modal -->
         <div class="modal fade" id="ModalCenter" tabindex="-1" role="dialog" aria-labelledby="ModalCenterTitle" aria-hidden="true">
@@ -102,7 +107,7 @@
                     </form>
                 </div>
                 <div class="modal-footer">
-                    <button id="b_create" type="button" class="btn btn-success" data-dismiss="modal">Create</button> //onclick="addEventToTable()"
+                    <button id="b_create" type="button" class="btn btn-success" data-dismiss="modal">Create</button>
                     <button type="button" class="btn btn-danger" data-dismiss="modal">Cancel</button>
                 </div>
             </div>
