--- a/Html docs/homepage.html
+++ b/Html docs/homepage.html
@@ -145,6 +145,19 @@
           firebase.initializeApp(config);
         </script>
         <script>
+        document.getElementById("logout-button").onclick = function() {log_out()};
+        function log_out(){
+          firebase.auth().signOut().then(function() {
+            // Sign-out successful.
+            alert('Sign-out successful.');
+            window.location.replace("Login.html");
+          }).catch(function(error) {
+            // An error happened.
+            var errorCode = error.code;
+            var errorMessage = error.message;
+            console.log(error);
+          });
+        }
         document.getElementById("b_create").onclick = function() {create_event()};
         function create_event(){
             var name = document.getElementById("event-title").value;
