--- a/Html docs/CreateAccount.html
+++ b/Html docs/CreateAccount.html
@@ -90,7 +90,7 @@ function send_verification(){
     alert('Password is weak. Must be 6 or more characters');
   }
   console.log(error);
-  window.location.replace("homepage.html");
+  window.location.replace("CreateAccount.html");
 });
 }//invalid
 
