--- a/Html docs/homepage.html
+++ b/Html docs/homepage.html
@@ -118,14 +118,16 @@
 				<!--<thead>-->
 					<tr>
 						<th scope="col">Event</th>
-						<th scope="col">Date</th>
+                        <th scope="col">Date</th>
+                        <th scope="col">Address</th>
 						<th scope="col">Time</th>
 						<th scopr="col">reminder</th>
 					</tr>
 				<!--</thead>
 				<tbody>-->
 					<th scope="row">testing</th>
-					<td>1/1/1111</td>
+                    <td>1/1/1111</td>
+                    <td>103 sesame street</td>
 					<td>12:00</td>
 					<td>12 hours before</td>
 				<!--</tbody>-->
@@ -170,7 +172,7 @@
             var reminder = document.getElementById("inputReminderTime").value;
 
             //insert element into the table
-            $('#eventTable').append('<tr><td>'+name+'</td><td>'+address+'</td><td>'+eTime+'</td><td>'+reminder+'</td></tr>');
+            $('#eventTable').append('<tr><td>'+name+'</td><td>'+date+'</td><td>'+address+'</td><td>'+eTime+'</td><td>'+reminder+'</td></tr>');
 
           var user = firebase.auth().currentUser;
           var userId = user.uid;
