--- a/Html docs/homepage.html
+++ b/Html docs/homepage.html
@@ -169,7 +169,7 @@
           var date = childData["date"];
           var eTime = childData["eTime"];
           var reminder = childData["reminder"];
-          $('#eventTable').append('<tr><td>'+name+'</td><td>'+address+'</td><td>'+eTime+'</td><td>'+reminder+'</td></tr>');
+          $('#eventTable').append('<tr><td>'+name+'</td><td>'+address+' '+city+' '+state+' '+zip+'</td><td>'+eTime+'</td><td>'+reminder+'</td></tr>');
           //start();
         });
       });
