--- a/Html docs/homepage.html
+++ b/Html docs/homepage.html
@@ -166,10 +166,13 @@
           //console.log(childData);
           var name =  childData["name"];
           var address = childData["address"];
+          var city = childData["city"];
+          var state = childData["state"];
+          var zip = childData["zip"];
           var date = childData["date"];
           var eTime = childData["eTime"];
           var reminder = childData["reminder"];
-          $('#eventTable').append('<tr><td>'+name+'</td><td>'+address+' '+city+' '+state+' '+zip+'</td><td>'+eTime+'</td><td>'+reminder+'</td></tr>');
+          $('#eventTable').append('<tr><td>'+name+'</td><td>'+date+'</td><td>'+address+': '+city+', '+state+' '+zip+'</td><td>'+eTime+'</td><td>'+reminder+'</td></tr>');
           //start();
         });
       });
@@ -201,7 +204,7 @@
             var reminder = document.getElementById("inputReminderTime").value;
 
             //insert element into the table
-            $('#eventTable').append('<tr><td>'+name+'</td><td>'+date+'</td><td>'+address+'</td><td>'+eTime+'</td><td>'+reminder+'</td></tr>');
+            $('#eventTable').append('<tr><td>'+name+'</td><td>'+date+'</td><td>'+address+': '+city+', '+state+' '+zip+'</td><td>'+eTime+'</td><td>'+reminder+'</td></tr>');
 
           var user = firebase.auth().currentUser;
           var userId = user.uid;
