Added project name

--- a/Html docs/homepage.html
+++ b/Html docs/homepage.html
@@ -11,7 +11,7 @@
     }
     </style>
     <head>
-        <title>Project Name</title>
+        <title>MyRemind</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <!--Included Boostrap-->
