--- a/Html docs/Login.html
+++ b/Html docs/Login.html
@@ -12,7 +12,7 @@
 <body>
 <div class="container">
 	<div class="jumbotron">
-		<h1>PROJECT NAME</h1>
+		<h1>MyRemind</h1>
 		<p>We remember so you dont have to</p>
 	</div>
 </div>
