--- a/Html docs/homepage.html
+++ b/Html docs/homepage.html
@@ -172,8 +172,9 @@
           var reminder = childData["reminder"];
           //$('#eventTable').append('<tr><td>'+name+'</td><td>'+address+' '+city+' '+state+' '+zip+'</td><td>'+eTime+'</td><td>'+reminder+'</td></tr>');
           $('#eventTable').append('<tr><td>'+name+'</td><td>'+date+'</td><td>'+address+' '+city+' '+state+' '+zip+'</td><td>'+eTime+'</td><td>'+reminder+'</td><td>'
-                +'<button type="button" class="btn btn-default" onclick="editCol()" aria-label="Left Align"\><span class="glyphicon glyphicon-edit" aria-hidden="true"\></span\></button>'
-                     +'</td></tr>');
+                +'<button type="button" class="btn btn-default" onclick="editCol()" data-toggle="modal" data-target="#ModalCenter" aria-label="Edit"\><span class="glyphicon glyphicon-edit" aria-hidden="true"\></span\></button>'
+                    +'<button type="button" class="btn btn-default" aria-label="trash"\><span class="glyphicon glyphicon-trash" aria-hidden="true"\></span\></button\>'
+                    +'</td></tr>');
           //start();
         });
       });
@@ -207,12 +208,19 @@
             //insert element into the table
             $('#eventTable').append('<tr><td>'+name+'</td><td>'+date+'</td><td>'+address+' '+city+' '+state+' '+zip+'</td><td>'+eTime+'</td><td>'+reminder+'</td><td>'
                 +'<button type="button" class="btn btn-default" onclick="editCol()" aria-label="Left Align"\><span class="glyphicon glyphicon-edit" aria-hidden="true"\></span\></button>'
+                +'<button type="button" class="btn btn-default" aria-label="trash"\><span class="glyphicon glyphicon-trash" aria-hidden="true"\></span\></button\>'
                      +'</td></tr>');
             //code for button to edit
             //glyphicon glyphicon-edit
             /*<button type="button" class="btn btn-default" aria-label="Left Align">
                 <span class="glyphicon glyphicon-edit" aria-hidden="true"></span>
-            </button>*/
+            </button>
+            <button type="button" class="btn btn-default" aria-label="trash">
+                <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
+            </button>
+            glyphicon glyphicon-trash
+            
+            */
           var user = firebase.auth().currentUser;
           var userId = user.uid;
           var key;
@@ -250,6 +258,7 @@
       });
         }
         function editCol(){
+
             $('td').prop('contenteditable',true);
             window.alert("This button works");
         }
