Updated update_event Function

--- a/Html docs/homepage.html
+++ b/Html docs/homepage.html
@@ -282,7 +282,50 @@
         }
         document.getElementById("b_update").onclick = function() {update_event()};
         function update_event(){
+          var name = document.getElementById("event-title").value;
+          var address = document.getElementById("streetaddress").value;
+          var city = document.getElementById("city").value;
+          var state = document.getElementById("state").value;
+          var zip = document.getElementById("zip").value;
+          var date = document.getElementById("chooseDate").value;
+          var eTime = document.getElementById("inputEventTime").value;
+          var reminder = document.getElementById("inputReminderTime").value;
 
+          var user = firebase.auth().currentUser;
+          var userId = user.uid;
+          var key;
+
+          var ref = firebase.database().ref('users');
+          var email = localStorage.getItem("email");
+          //console.log(email);
+          ref.once('value', function(snapshot) {
+          snapshot.forEach(function(childSnapshot) {
+          var childKey = childSnapshot.key;
+          var childData = childSnapshot.val();
+          console.log(childData["email"]);
+          if( childData["email"] === email) {
+            key = childKey;
+            //console.log(key);
+          }
+        });
+      }).then((res) => {
+        //console.log(key);
+        var data = {
+          name: name,
+          address: address,
+          city: city,
+          state: state,
+          zip: zip,
+          date: date,
+          eTime: eTime,
+          reminder: reminder,
+          email: email
+        };
+        var updates = {};
+        updates['/users/' + key + '/events/' + name] = data;
+        firebase.database().ref().update(updates);
+        //ref.push(data);
+      });
         }
         document.getElementById("b_create").onclick = function() {create_event()};
         function create_event(){
@@ -383,20 +426,6 @@
             document.getElementById('chooseDate').setAttribute('value', date);
             document.getElementById('inputEventTime').setAttribute('value', eTime);
             document.getElementById('inputReminderTime').setAttribute('value', reminder);
-            var data = {
-              name: name,
-              address: address,
-              city: city,
-              state: state,
-              zip: zip,
-              date: date,
-              eTime: eTime,
-              reminder: reminder,
-              email: email
-            };
-            var updates = {};
-            updates['/users/' + key + '/events/' + name] = data;
-            firebase.database().ref().update(updates);
           }
         });
       })
