--- a/Html docs/homepage.html
+++ b/Html docs/homepage.html
@@ -444,6 +444,13 @@
             var eTime = document.getElementById("inputEventTime").value;
             var reminder = document.getElementById("inputReminderTime").value;
 			
+			var schedule = require("../node-schedule");
+
+			var splitDate = data.split("/");
+			window.alert(splitDate[0]);
+
+}
+			
 		
 		</script>
 
