--- a/Html docs/homepage.html
+++ b/Html docs/homepage.html
@@ -477,6 +477,9 @@
             var reminder = document.getElementById("inputReminderTime").value;
 			
 			//var schedule = require("../node-schedule");
+			
+			var MS_PER_MINUTE = 60000
+			//var myStartDate = new Date(myEndDateStime - durationInMinutes * MS_PER_MINUTE);
 
 			var splitDate = date.split("/");
 			var splitTime = eTime.split(/:| /);
